Version 2.03.02 - 
===================================
  Fix missing proper initialization of pv_list struct when adding pv.
  Fix (de)activation of RaidLVs with visible SubLVs
  Prohibit mirrored 'mirror' log via lvcreate and lvconvert
  Use sync io if async io_setup fails, or use_aio=0 is set in config.

Version 2.03.01 - 31st October 2018
===================================

Version 2.03.00 - 10th October 2018
===================================
  Add hot fix to avoiding locking collision when monitoring thin-pools.
  Allow raid4 -> linear conversion request.
  Fix lvconvert striped/raid0/raid0_meta -> raid6 regression.
  Add 'lvm2-activation-generator:' prefix for kmsg messages logged by generator.
  Add After=rbdmap.service to {lvm2-activation-net,blk-availability}.service.
  Reduce max concurrent aios to avoid EMFILE with many devices.
  Fix lvconvert conversion attempts to linear.
  Fix lvconvert raid0/raid0_meta -> striped regression.
  Fix lvconvert --splitmirror for mirror type (2.02.178).
  Do not pair cache policy and cache metadata format.
  lvconvert: reject conversions on raid1 LVs with split tracked SubLVs
  lvconvert: reject conversions on raid1 split tracked SubLVs
  Add basic creation support for VDO target.
  Never send any discard ioctl with test mode.
  Fix thin-pool alloc which needs same PV for data and metadata.
  Extend list of non-memlocked areas with newly linked libs.
  Enhance vgcfgrestore to check for active LVs in restored VG.
  Configure supports --disable-silent-rules for verbose builds.
  Fix unmonitoring of merging snapshots.
  Cache can uses metadata format 2 with cleaner policy.
  Fix check if resized PV can also fit metadata area.
  Avoid showing internal error in lvs output or pvmoved LVs.
  Remove clvmd
  Remove lvmlib (api)
  Remove lvmetad
  lvconvert: provide possible layouts between linear and striped/raid
  Use versionsort to fix archive file expiry beyond 100000 files.

Version 2.02.178-rc1 - 24th May 2018